ghc-4335c07/testsuite/tests/typecheck/should_compile/T10493.hs
{-# LANGUAGE FlexibleContexts #-}

module T10493 where

import Data.Coerce
import Data.Ord (Down)  -- no constructor

foo :: Coercible (Down Int) Int => Down Int -> Int
foo = coerce
